--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -140,6 +140,7 @@
 	<script src="https://{{ site.org }}.github.io/master/js/editor-config-json.js" type="text/javascript"></script>
 	<script src="https://{{ site.org }}.github.io/master/js/editor-keys-json.js" type="text/javascript"></script>
 	<script src="https://{{ site.org }}.github.io/master/js/editor-question-json.js" type="text/javascript"></script>
+	<script src="{{ production_url }}/js/master-code-from-apis-json.js" type="text/javascript"></script>
 	
 	<script src="https://{{ site.org }}.github.io/{{ site.repo }}/js/editor-resource-json.js" type="text/javascript"></script>
 	<script src="https://{{ site.org }}.github.io/{{ site.repo }}/js/load.js" type="text/javascript"></script>  	      	
