--- a/_includes/head.html
+++ b/_includes/head.html
@@ -603,10 +603,10 @@
 
   </style>
 
-  <link rel="stylesheet" href="https://{{ site.org }}.github.io/{{ site.repo }}/css/syntax.css">
+  <link rel="stylesheet" href="https://{{ site.org }}.github.io/master/css/syntax.css">
 
-  <link rel="shortcut icon" type="image/x-icon" href="https://{{ site.org }}.github.io/{{ site.repo }}/favicon.ico">
-	<link rel="icon" type="image/x-icon" href="https://{{ site.org }}.github.io/{{ site.repo }}/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="http://{{ site.org }}.github.io/master/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="http://{{ site.org }}.github.io/master/favicon.ico">
 
   <script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
   <script src='https://s3.amazonaws.com/kinlane-productions/js/handlebars-2.0.0.js' type='text/javascript'></script>
