--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
         <!-- Sponsorship -->
         <script id="parterListingTemplate" type="text/template">
             {% raw  %}
-            <a href="{{url}}" target="_blank" title="{{title}}">
+            <a href="{{ site.repo }}/{{url}}" target="_blank" title="{{title}}">
            		<img src="{{logo}}" width="{{width}}" style="padding: 2px;" />
             </a>
             {% endraw %}
